# validator

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE-MIT  Pipfile  README.md  go.mod  go.sum  main.go  main_test.go  openapi.go  requirements-dev.txt  requirements.txt
.circleci/: config.yml
.github/workflows/: publish.yml  test.yml
frontend/: pagesetup.css  validator.css  validator.html  validator.js
service/: Cargo.toml  README.md
service/src/: main.rs
src/: main.rs
v1/: validator.go  validator_test.go
v2/: validator.go  validator_test.go
validator/: .gitignore  Cargo.toml  coredump.json  openapi.json  pytest.ini  requirements-dev.txt  server.py  service.py  validation.py
validator/src/: errors.rs  lib.rs
validator/tests/: conftest.py  test_cors.py  test_service.py
validator/tests/data/: minimal.json  missing_url_logo.json
